test/parser/fuzz.5.err
EXPECTED_END_OF_ARGUMENT_LIST[1018] in test/parser/fuzz.5.pytch, line 1, character 21:
Error: I was expecting a ',' or ')' after the previous argument.
   +---------------------------------------------------------------------+
   | test/parser/fuzz.5.pytch                                            |
 1 | let foo = letprint(1let)                                            |
   |                     ^ Error: I was expecting a ',' or ')' after the |
   | previous argument.                                                  |
   +---------------------------------------------------------------------+
